// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%= for item <- @items do %>
        <%= item %>
item
    <% end %>

=====================================output=====================================
<%= for item <- @items do %>
  <%= item %>
  item
<% end %>

================================================================================
`;

exports[`for_in_html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<%= for item <- @items do %>
  <%= item %>
  item
<% end %>
</div>
<span>
<%= for item <- @items do %>
  <%= item %>
  item
<% end %>
</span>

<div>
<%= for item <- @items do %>
  <div>
<%= item %>
    </div>
  <span>item<%= fm %></span>
<% end %>
</div>

=====================================output=====================================
<div>
  <%= for item <- @items do %>
    <%= item %>
    item
  <% end %>
</div>
<span>
  <%= for item <- @items do %>
    <%= item %>
    item
  <% end %>
</span>

<div>
  <%= for item <- @items do %>
    <div>
      <%= item %>
    </div>
    <span>item<%= fm %></span>
  <% end %>
</div>

================================================================================
`;
